@@ -11,9 +11,10 @@ BUG: SF#1432624 - Incorrect documentation about caching expiry (Qiang)
 BUG: THttpSession fails when user storage module is used (Qiang)
 CHG: TTextHighlighter.EnableCopyCode defaults to false (Qiang)
 CHG: Reorganized quickstart tutorial demo, added new sections (Qiang)
+ENH: Ticket#92 - Support for user exception message file (Qiang)
+ENH: Ticket#106 - Support for validation on THiddenField (Qiang)
 ENH: TDataFieldAccessor can access public class variables (Qiang)
 ENH: Pagers in TDataGrid are now enclosed within panels (Qiang)
-ENH: Ticket#92 - Support for user exception message file (Qiang)
 ENH: TPhpErrorException now shows the actual error lines (Qiang)
 NEW: TSQLMap module (Wei)
 NEW: TStack class (Qiang)
